// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prompt with Custom tag  renders with custom tag "span" correctly renders 1`] = `
<PreviewPrompt
  className="prompt"
  classes={
    Object {
      "label": "PreviewPrompt-label-3",
      "prompt": "PreviewPrompt-prompt-1",
      "promptTable": "PreviewPrompt-promptTable-4",
      "rationale": "PreviewPrompt-rationale-2",
    }
  }
  onClick={[Function]}
  prompt="Which of these northern European countries are EU members? <math><mstack><msrow><mn>111</mn></msrow><msline/></mstack></math>"
  tagName="span"
/>
`;

exports[`Prompt without Custom tag  default class with markup renders 1`] = `
<PreviewPrompt
  className=""
  classes={
    Object {
      "label": "PreviewPrompt-label-3",
      "prompt": "PreviewPrompt-prompt-1",
      "promptTable": "PreviewPrompt-promptTable-4",
      "rationale": "PreviewPrompt-rationale-2",
    }
  }
  onClick={[Function]}
  prompt="Which of these northern European countries are EU members? <math><mstack><msrow><mn>111</mn></msrow><msline/></mstack></math>"
  tagName=""
/>
`;
